[tool.poetry]
name = "pearpy"
version = "1.2.0"
description = "Improved Laharz - Python"
authors = ["Ruli Andaru <ruliandaru@ugm.ac.id>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numpy = ">=1.18"
shapely = "^1.7.0"
tqdm = "^4.48.2"
gdal = { path = "../../../../.pypkg/GDAL-3.3.2-cp39-cp39-win_amd64.whl" }
fiona = { path = "../../../../.pypkg/Fiona-1.8.20-cp39-cp39-win_amd64.whl" }
rasterio = { path = "../../../../.pypkg/rasterio-1.2.9-cp39-cp39-win_amd64.whl" }
pyside2 = "^5.15.0"
typing-extensions = { version = "^3.7.4", optional = true }
Shapely = "^1.7.1"
pyproj = ">=3.1.0"
whitebox = "^1.4.0"
geosardine = ">=0.11.0a1"
opencv-python = "4.5.3.56"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
mypy = "^0.790"
pyinstaller = "^4.1"
pyinstaller-hooks-contrib = "^2020.11"
ipykernel = "^5.4.3"
pdoc3 = "^0.9.2"

[tool.poetry.scripts]
pearpy = 'pearpy.__main__:main'
pearpy-gui = 'pearpy.gui.app:main'

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.masonry.api"
